--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/login_bg"
+    android:background="@color/background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -16,12 +16,12 @@
 
         <ImageView
             android:id="@+id/signup_propic_imageView"
-            android:layout_width="125sp"
-            android:layout_height="125sp"
+            android:layout_width="115sp"
+            android:layout_height="115sp"
             android:layout_alignParentTop="true"
             android:layout_alignWithParentIfMissing="false"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/sign_up_page1" />
+            android:src="@drawable/logo" />
 
 
         <TableLayout
@@ -33,7 +33,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/signup_propic_imageView"
-            android:padding="10sp">
+            android:padding="5dp">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -43,23 +43,15 @@
 
                 <EditText
                     android:id="@+id/signup_fristname_editText"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_column="0"
+                    android:layout_weight="1"
                     android:ems="10"
                     android:hint="Frist name"
                     android:inputType="textPersonName"
                     android:textSize="12sp" />
 
-                <EditText
-                    android:id="@+id/signup_lastname_editText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_column="1"
-                    android:ems="10"
-                    android:hint="Last name"
-                    android:inputType="textPersonName"
-                    android:textSize="12sp" />
             </TableRow>
 
             <TableRow
@@ -67,6 +59,16 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="5sp">
 
+                <EditText
+                    android:id="@+id/signup_lastname_editText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_column="0"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="Last name"
+                    android:inputType="textPersonName"
+                    android:textSize="12sp" />
             </TableRow>
 
             <TableRow
@@ -84,6 +86,24 @@
 
             </TableRow>
 
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5sp">
+
+
+                <EditText
+                    android:id="@+id/signup_Work_editText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_column="0"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="Job title"
+                    android:inputType="textPersonName"
+                    android:textSize="12sp" />
+
+            </TableRow>
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -171,7 +191,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_column="0"
-                    android:text="Gender"
+                    android:text="Sex"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textSize="12sp" />
 
