--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_bg"
+    android:background="@color/background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -15,68 +15,65 @@
 
     <EditText
         android:id="@+id/LoginPage_UserName_editText"
-        android:layout_width="300sp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView"
         android:layout_marginTop="36dp"
-        android:backgroundTint="@color/underline"
-        android:hint="User name"
-        android:textColorHighlight="@color/colorPrimary"
-        android:textColorHint="@color/colorPrimary" />
+        android:hint="User name" />
 
     <EditText
         android:id="@+id/LoginPage_Password_editText"
-        android:layout_width="300sp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:backgroundTint="@color/underline"
         android:hint="Password"
         android:inputType="textPassword"
-        android:textColorHighlight="@color/colorPrimary"
-        android:textColorHint="@color/colorPrimary"
-
         />
 
     <Button
         android:id="@+id/LoginPage_Login_button"
         android:layout_width="300sp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/LoginPage_SignUp_button"
+        android:layout_below="@+id/LoginPage_Password_editText"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp"
-        android:background="@color/white"
-        android:text="Login"
+        android:layout_marginTop="48dp"
 
+        android:background="@drawable/button_selector"
+        android:text="Login"
+        android:textColor="@color/black"
+        android:translationZ="2dp"
         />
 
     <Button
         android:id="@+id/LoginPage_SignUp_button"
         android:layout_width="300sp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/LoginPage_Skip_button"
+        android:layout_below="@+id/LoginPage_Login_button"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="23dp"
-        android:background="@color/white"
-        android:text="Don't have account? Sign Up" />
+        android:background="@drawable/button_selector"
+        android:text="Don't have account? Sign Up"
+        android:translationZ="2dp" />
 
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="125sp"
+        android:layout_height="125sp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp"
-        android:src="@drawable/sign_up_page" />
-    <Button
-        android:id="@+id/LoginPage_Skip_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:background="@color/white"
-        android:text="Skip Login" />
+        android:src="@drawable/logo" />
+    <!--<Button-->
+    <!--android:id="@+id/LoginPage_Skip_button"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:layout_centerHorizontal="true"-->
+    <!--android:background="@color/white"-->
+    <!--android:text="Skip Login" />-->
 
 </RelativeLayout>
