--- a/app/src/main/res/layout/tab1.xml
+++ b/app/src/main/res/layout/tab1.xml
@@ -9,8 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.user.ds.Main2Activity"
-    tools:showIn="@layout/activity_main2">
+    tools:context="com.example.khalid.sharektest.MyProfile">
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="119dp">
@@ -21,40 +20,40 @@
 
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Phone : "
                 android:id="@+id/textView6"
-                android:layout_column="0" />
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Large Text"
+                android:layout_column="0"
+                android:text="Phone : "
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
                 android:id="@+id/textView8"
-                android:layout_column="12" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="12"
+                android:text="Large Text"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
         </TableRow>
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Bio : "
                 android:id="@+id/textView11"
-                android:layout_column="0" />
-
-            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Large Text"
+                android:layout_column="0"
+                android:text="Bio : "
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
                 android:id="@+id/textView10"
-                android:layout_column="12" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="12"
+                android:text="Large Text"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
         </TableRow>
         <TableRow
             android:layout_width="match_parent"
@@ -62,19 +61,19 @@
 
 
             <TextView
+                android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Brith Day : "
-                android:id="@+id/textView7" />
+                android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
+                android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_column="12"
                 android:text="Large Text"
-                android:id="@+id/textView9"
-                android:layout_column="12" />
+                android:textAppearance="?android:attr/textAppearanceLarge" />
         </TableRow>
 
     </TableLayout>
