--- a/app/src/main/res/menu/activity_home_page_drawer.xml
+++ b/app/src/main/res/menu/activity_home_page_drawer.xml
@@ -11,6 +11,14 @@
             android:id="@+id/nav_categories"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Categories" />
+        <item
+            android:id="@+id/nav_add_share"
+            android:icon="@drawable/plus"
+            android:title="Add Share" />
+        <item
+            android:id="@+id/nav_add_intrest"
+            android:icon="@drawable/plus"
+            android:title="Add Interest" />
 
     </group>
 
@@ -23,16 +31,15 @@
             <item
                 android:id="@+id/nav_contact_us"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Contact us" />
-            <item
-                android:id="@+id/nav_add_share"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Add Share" />
-            <item
-                android:id="@+id/nav_add_intrest"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Add Intrest" />
+                android:title="Contact us"
+                android:visible="false" />
+
         </menu>
     </item>
+    <item
+        android:id="@+id/nav_log_out"
+        android:icon="@drawable/ic_menu_send"
+        android:title="Log out" />
+
 
 </menu>
