--- a/app/src/main/res/layout/tab1.xml
+++ b/app/src/main/res/layout/tab1.xml
@@ -28,11 +28,11 @@
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/myProfile_about_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="12"
-                android:text="Large Text"
+                android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge" />
         </TableRow>
         <TableRow
@@ -44,15 +44,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
-                android:text="Bio : "
+                android:text="Points : "
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/myProfile_about_points"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="12"
-                android:text="Large Text"
+                android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge" />
         </TableRow>
         <TableRow
@@ -64,15 +64,15 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Brith Day : "
+                android:text="E-mail : "
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
-                android:id="@+id/textView9"
+                android:id="@+id/myProfile_about_mail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="12"
-                android:text="Large Text"
+                android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge" />
         </TableRow>
 
