[Technical]Apply onItemLongClick in Notifications activity. [Technical]Some enhancements in Home screen view.

--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -12,6 +12,10 @@
     <ListView
         android:id="@+id/Notification_listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"
+        android:divider="@color/white"
+        android:dividerHeight="5dp">
+
+    </ListView>
 
 </RelativeLayout>
