--- a/app/src/main/res/layout/content_home_page.xml
+++ b/app/src/main/res/layout/content_home_page.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
         android:orientation="vertical"
+
             >
 
         <LinearLayout
@@ -43,7 +44,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="10sp"
-                android:layout_weight=".9" />
+                android:layout_weight=".9"
+                android:divider="@color/white"
+                android:dividerHeight="3dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -68,7 +71,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="10dp"
-                android:layout_weight=".9" />
+                android:layout_weight=".9"
+                android:divider="@color/white"
+                android:dividerHeight="3dp" />
         </LinearLayout>
             <!--<TextView-->
             <!--android:layout_width="wrap_content"-->
