--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -3,7 +3,10 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10sp"
+    android:layout_marginBottom="5dp"
+    android:background="@color/colorPrimaryDark"
     android:orientation="horizontal"
+    android:translationZ="3dp"
 
     >
 
@@ -11,7 +14,7 @@
         android:id="@+id/productItem_image_imageView"
         android:layout_width="100sp"
         android:layout_height="100sp"
-        android:padding="3dp"
+        android:padding="5dp"
         android:src="@drawable/blank_photo" />
 
     <TextView
