--- a/app/src/main/res/layout/content_product_page.xml
+++ b/app/src/main/res/layout/content_product_page.xml
@@ -23,6 +23,16 @@
             android:orientation="vertical">
 
             <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="130dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_weight=".9"
+                android:background="@drawable/blank_photo"
+                android:visibility="gone"/>
+
+            <com.android.volley.toolbox.NetworkImageView
                 android:id="@+id/Product_ImageView_ProductImage"
                 android:layout_width="wrap_content"
                 android:layout_height="130dp"
@@ -30,7 +40,7 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_weight=".9"
-                android:background="@drawable/blank_photo" />
+                android:background="@drawable/blank_photo"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
