[Technical]Add Tour Screens. [Technical]Enhancements in my profile activity. [Technical]Make two tabs in home page. [Technical] Apply search by tag,

--- a/app/src/main/res/layout/content_home_page.xml
+++ b/app/src/main/res/layout/content_home_page.xml
@@ -2,236 +2,63 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/Content_homePage"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="0dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.khalid.sharektest.HomePage"
     tools:showIn="@layout/app_bar_home_page">
 
 
-    <LinearLayout
-            android:id="@+id/FirstLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-        android:orientation="vertical"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:background="?attr/colorPrimary" />
 
-            >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight=".1"
-                android:text="Shares"
-                android:textColor="@color/colorPrimary"
-                android:textSize="20sp" />
-            <ListView
-                android:id="@+id/homePage_listView_shares"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="10sp"
-                android:layout_weight=".9"
-                android:divider="@color/white"
-                android:dividerHeight="3dp" />
-        </LinearLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/tab_layout" />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight=".1"
-                android:text="Interests"
-                android:textColor="@color/colorPrimary"
-                android:textSize="20sp" />
+                android:layout_marginTop="14dp">
 
-            <ListView
-                android:id="@+id/homePage_interests"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="10dp"
-                android:layout_weight=".9"
-                android:divider="@color/white"
-                android:dividerHeight="3dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:tag="tab0"
+                    android:text="Shares"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:tag="tab1"
+                    android:text="Interests"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+            </TabWidget>
+
         </LinearLayout>
-            <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-            <!--android:text="welcome at sharek community"-->
-            <!--android:id="@+id/HomePage_Welcome_textView"-->
-            <!--android:layout_alignParentTop="true"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:textSize="25sp"/>-->
-            <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="Life is more easier when we share.\n      we create strong community"-->
-            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-            <!--android:textSize="15sp"-->
-            <!--android:layout_below="@id/HomePage_Welcome_textView"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:id="@+id/HomePage_Hi_TextView" />-->
-            <!--<EditText-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@id/HomePage_Hi_TextView"-->
-            <!--android:id="@+id/HomePage_Search_edittext"-->
-            <!--android:layout_marginStart="30dp"-->
-            <!--android:hint="What are you looking for?"/>-->
-            <!--<ImageButton-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@drawable/ic_search_black_36dp"-->
-            <!--android:layout_alignTop="@+id/HomePage_Search_edittext"-->
-            <!--android:layout_alignParentLeft="true"-->
-            <!--android:layout_alignParentStart="true" />-->
-            <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-            <!--android:layout_below="@id/HomePage_Search_edittext"-->
-            <!--android:id="@+id/HomePage_categoriesText_TextView"-->
-            <!--android:text="Enjoy with our categories"-->
-            <!--android:layout_marginTop="10dp"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--/>-->
-            <!--<ImageButton-->
-            <!--android:layout_width="60dp"-->
-            <!--android:layout_height="60dp"-->
-            <!--android:background="@drawable/portfolio_09"-->
-            <!--android:id="@+id/HomePage_Categories_HomeThings_ImageButton"-->
-            <!--android:layout_below="@id/HomePage_categoriesText_TextView"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:layout_marginTop="20dp"/>-->
-            <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
-            <!--android:text="Home Things"-->
-            <!--android:layout_alignBottom="@id/HomePage_Categories_HomeThings_ImageButton"-->
-            <!--android:id="@+id/HomePage_Category1_TextView"-->
-
-            <!--android:textSize="10sp"-->
-            <!--/>-->
-            <!--<ImageButton-->
-            <!--android:layout_width="60dp"-->
-            <!--android:layout_height="60dp"-->
-            <!--android:background="@drawable/portfolio_02"-->
-            <!--android:id="@+id/HomePage_Categories_Electronics_ImageButton"-->
-            <!--android:layout_below="@id/HomePage_categoriesText_TextView"-->
-            <!--android:layout_marginTop="20dp"-->
-            <!--android:layout_marginStart="10dp"-->
-            <!--android:layout_toEndOf="@id/HomePage_Categories_HomeThings_ImageButton"/>-->
-            <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
-            <!--android:text="Electronics"-->
-            <!--android:textSize="10sp"-->
-            <!--android:id="@+id/HomePage_Category2_TextView"-->
-            <!--android:layout_alignBottom="@id/HomePage_Categories_Electronics_ImageButton"-->
-            <!--android:layout_alignLeft="@+id/HomePage_Categories_Electronics_ImageButton"-->
-            <!--android:layout_alignStart="@+id/HomePage_Categories_Electronics_ImageButton"-->
-            <!--/>-->
-            <!--<ImageButton-->
-            <!--android:layout_width="60dp"-->
-            <!--android:layout_height="60dp"-->
-            <!--android:layout_marginStart="10dp"-->
-            <!--android:background="@drawable/portfolio_03"-->
-            <!--android:id="@+id/HomePage_Categories_WorkSpaces_ImageButton"-->
-            <!--android:layout_below="@id/HomePage_categoriesText_TextView"-->
-            <!--android:layout_toEndOf="@id/HomePage_Categories_Electronics_ImageButton"-->
-            <!--android:layout_marginTop="20dp"/>-->
-            <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:id="@+id/HomePage_Category3_TextView"-->
-            <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
-            <!--android:text="Work Spaces"-->
-            <!--android:layout_alignBottom="@id/HomePage_Categories_WorkSpaces_ImageButton"-->
-            <!--android:layout_alignLeft="@+id/HomePage_Categories_WorkSpaces_ImageButton"-->
-            <!--android:layout_alignStart="@+id/HomePage_Categories_WorkSpaces_ImageButton"-->
-            <!--android:textSize="10sp"-->
-            <!--/>-->
-            <!--<ImageButton-->
-            <!--android:layout_width="60dp"-->
-            <!--android:layout_height="60dp"-->
-            <!--android:layout_marginStart="10dp"-->
-            <!--android:background="@drawable/portfolio_04"-->
-            <!--android:id="@+id/HomePage_Categories_WiFi_ImageButton"-->
-            <!--android:layout_below="@id/HomePage_categoriesText_TextView"-->
-            <!--android:layout_marginTop="20dp"-->
-            <!--android:layout_toEndOf="@id/HomePage_Categories_WorkSpaces_ImageButton"/>-->
-            <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
-            <!--android:text="WiFi"-->
-            <!--android:textSize="12sp"-->
-            <!--android:textColor="@color/white"-->
-            <!--android:id="@+id/HomePage_Category4_TextView"-->
-            <!--android:layout_alignBottom="@id/HomePage_Categories_WiFi_ImageButton"-->
-            <!--android:layout_alignLeft="@+id/HomePage_Categories_WiFi_ImageButton"-->
-            <!--android:layout_alignStart="@+id/HomePage_Categories_WiFi_ImageButton" />-->
-
-            <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:id="@+id/HomePage_ShareText_TextView"-->
-            <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-            <!--android:text="People shared and Seekers"-->
-            <!--android:layout_below="@id/HomePage_Categories_HomeThings_ImageButton"-->
-            <!--android:layout_centerHorizontal="true"-->
-            <!--android:layout_marginTop="30dp"-->
-            <!--/>-->
-            <!--<ImageButton-->
-            <!--android:layout_width="100dp"-->
-            <!--android:layout_height="100dp"-->
-            <!--android:layout_marginTop="20dp"-->
-            <!--android:layout_below="@+id/HomePage_ShareText_TextView"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--android:background="@drawable/blank_photo"-->
-            <!--android:id="@+id/HomePage_SharedItem1_ImageButton"-->
-            <!--/>-->
-            <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
-            <!--android:text="price"-->
-            <!--android:layout_below="@id/HomePage_SharedItem1_ImageButton"-->
-            <!--android:layout_alignStart="@id/HomePage_SharedItem1_ImageButton"-->
-            <!--/>-->
-            <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
-            <!--android:text="town"-->
-            <!--android:layout_below="@id/HomePage_SharedItem1_ImageButton"-->
-            <!--android:layout_alignEnd="@id/HomePage_SharedItem1_ImageButton"-->
-            <!--/>-->
-    </LinearLayout>
 
 
 </RelativeLayout>
