--- a/app/src/main/res/drawable/my_custom_background.xml
+++ b/app/src/main/res/drawable/my_custom_background.xml
@@ -1,10 +1,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:radius="2dp"
-        android:topRightRadius="0dp"
+        android:bottomLeftRadius="0dp"
         android:bottomRightRadius="0dp"
-        android:bottomLeftRadius="0dp" />
+        android:radius="2dp"
+        android:topRightRadius="0dp" />
     <stroke
         android:width="5dp"
         android:color="@android:color/white" />
