--- a/app/src/main/res/layout/content_contact_us.xml
+++ b/app/src/main/res/layout/content_contact_us.xml
@@ -11,161 +11,111 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.khalid.sharektest.ContactUs"
     tools:showIn="@layout/activity_contact_us">
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Send us a Message"
         android:id="@+id/textView3"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Full Name:"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/textView3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/Cous_name_editText"
-        android:layout_below="@+id/textView4"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentTop="true"
+        android:text="Send us a Message"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#1c0eb4" />
 
     <TextView
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Phone Number:"
+        android:layout_below="@+id/textView3"
+        android:layout_marginTop="50dp"
+        android:text="Full Name:"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <EditText
+        android:id="@+id/Cous_name_editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView4" />
+
+    <TextView
         android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/Cous_name_editText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:text="Phone Number:"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="phone"
-        android:ems="10"
         android:id="@+id/cous_phone_edittext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/textView5"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Email Address:"
-        android:id="@+id/textView6"
-        android:layout_below="@+id/cous_phone_edittext"
-        android:layout_alignRight="@+id/textView5"
-        android:layout_alignEnd="@+id/textView5" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/cous_email_editText"
-        android:layout_below="@+id/textView6"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignLeft="@+id/textView6"
-        android:layout_alignStart="@+id/textView6" />
+        android:inputType="phone" />
 
     <TextView
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Message:"
-        android:id="@+id/textView7"
-        android:layout_below="@+id/cous_email_editText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/cous_phone_edittext"
+        android:text="Email Address:"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
+        android:id="@+id/cous_email_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/cous_mes_editText"
-        android:layout_below="@+id/textView7"
-        android:layout_alignLeft="@+id/cous_email_editText"
-        android:layout_alignStart="@+id/cous_email_editText"
+        android:layout_alignLeft="@+id/textView6"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignStart="@+id/textView6"
+        android:layout_below="@+id/textView6"
+        android:ems="10"
+        android:inputType="textEmailAddress" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/cous_email_editText"
+        android:text="Message:"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <EditText
+        android:id="@+id/cous_mes_editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/cous_email_editText"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignStart="@+id/cous_email_editText"
+        android:layout_below="@+id/textView7" />
+
 
     <Button
+        android:id="@+id/cous_send_Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Send Message"
-        android:id="@+id/cous_send_button"
-        android:layout_alignTop="@+id/textView3"
-        android:layout_alignRight="@+id/Cous_name_editText"
-        android:layout_alignEnd="@+id/Cous_name_editText" />
-
-    <SlidingDrawer
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:content="@+id/linearLayout"
-        android:handle="@+id/cous_handle_button"
-        android:id="@+id/slidingDrawer"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/textView7">
-
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Call Us "
-                android:id="@+id/cous_slidingChoice1_Button"
-                android:layout_gravity="center_horizontal"
-                android:layout_below="@+id/cous_send_button"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
-
-            <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Send Message "
-                android:id="@+id/cous_slidingChoice2_Button" />
-
-            <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Facebook"
-                android:id="@+id/cous_slidingChoice3_Button" />
-            <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Twitter"
-                android:id="@+id/cous_slidingChoice4_Button"
-                android:layout_gravity="center_horizontal" />
-
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/cous_handle_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="click or slide up for options" />
-    </SlidingDrawer>
-
+        android:layout_below="@+id/cous_mes_editText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="38dp"
+        android:background="#ca2c2c"
+        android:gravity="center_vertical"
+        android:padding="10dp"
+        android:text="Send Message "
+        android:textColor="@color/white" />
 
 </RelativeLayout>
