--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,49 +13,61 @@
     tools:context="com.example.khalid.sharektest.MainActivity"
     tools:showIn="@layout/activity_main">
 
+    <LinearLayout
+        android:id="@+id/login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView"
+        android:layout_marginTop="10dp"
+        android:orientation="vertical"
+        android:paddingLeft="30dp">
     <EditText
         android:id="@+id/LoginPage_UserName_editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView"
-        android:layout_marginTop="36dp"
-        android:hint="User name" />
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="50dp"
+        android:layout_weight="1"
+        android:hint="User name"
+        android:paddingLeft="10dp" />
 
     <EditText
         android:id="@+id/LoginPage_Password_editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
+        android:layout_marginRight="60dp"
+        android:layout_weight="1"
         android:hint="Password"
         android:inputType="textPassword"
-        />
-
+        android:paddingLeft="10dp"
+        android:paddingTop="30dp" />
+    </LinearLayout>
     <Button
         android:id="@+id/LoginPage_Login_button"
-        android:layout_width="300sp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/LoginPage_Password_editText"
+        android:layout_below="@+id/login"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp"
         android:layout_marginTop="48dp"
-
-        android:background="@drawable/button_selector"
+        android:background="@color/black"
         android:text="Login"
-        android:textColor="@color/black"
-        android:translationZ="2dp"
-        />
+        android:textColor="@color/white"
+        android:translationZ="2dp" />
 
     <Button
         android:id="@+id/LoginPage_SignUp_button"
-        android:layout_width="300sp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/LoginPage_Login_button"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="23dp"
-        android:background="@drawable/button_selector"
-        android:text="Don't have account? Sign Up"
+        android:background="@color/black"
+        android:padding="15dp"
+        android:text="Create new account"
+        android:textColor="@color/white"
         android:translationZ="2dp" />
 
 
