--- a/app/src/main/res/layout/content_my_profile.xml
+++ b/app/src/main/res/layout/content_my_profile.xml
@@ -7,80 +7,32 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
+
     <RelativeLayout
+
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/bar"
         android:weightSum="1">
 
-        <RelativeLayout
-            android:id="@+id/linearLayout"
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/bar"
             android:layout_width="match_parent"
-            android:layout_height="220dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="#a9a4a4"
-            android:orientation="horizontal"
-            android:weightSum="1">
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
                 android:background="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|enterAlways"
-                app:popupTheme="@style/AppTheme.PopupOverlay">
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-            </android.support.v7.widget.Toolbar>
-
-            <ImageView
-                android:id="@+id/myprofile_profipic_imageView2"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_below="@+id/toolbar"
-                android:layout_centerHorizontal="true"
-                android:layout_weight="0.62"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:id="@+id/myprofile_name_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/myprofile_profipic_imageView2"
-                android:layout_alignStart="@+id/myprofile_profipic_imageView2"
-                android:layout_below="@+id/myprofile_profipic_imageView2"
-                android:text="Medium Text"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-            <ImageButton
-                android:id="@+id/myprofile_change_button"
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/myprofile_name_textView"
-                android:layout_alignEnd="@+id/myprofile_profipic_imageView2"
-                android:layout_alignRight="@+id/myprofile_profipic_imageView2"
-                android:background="@drawable/ic_add_black_18dp"
-                />
-
-            <TextView
-                android:id="@+id/myprofile_levelpoints_textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/myprofile_name_textView"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center|bottom"
-                android:text="Level 1 - 30 Points"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:visibility="gone" />
-
-        </RelativeLayout>
+        </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/container"
@@ -98,8 +50,41 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/linearLayout"
-            android:background="#a9a4a4" />
+            android:background="@color/colorPrimary" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
+
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="14dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:tag="tab0"
+                    android:text="Info"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:tag="tab1"
+                    android:text="Proposals"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+            </TabWidget>
+        </LinearLayout>
+
 
     </RelativeLayout>
 
