--- a/app/src/main/res/layout/content_search_page.xml
+++ b/app/src/main/res/layout/content_search_page.xml
@@ -12,11 +12,22 @@
     tools:context="com.example.khalid.sharektest.SearchPage"
     tools:showIn="@layout/activity_search_page">
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/searchpage_listView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+    <EditText
+        android:id="@+id/Tags_TextView_first"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:hint="#Tag "
+        android:padding="20dp"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/tag_Button_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/Tags_TextView_first"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:background="#ca1f1f"
+        android:text="Search" />
 </RelativeLayout>
