--- a/app/src/main/res/layout/tab1.xml
+++ b/app/src/main/res/layout/tab1.xml
@@ -4,19 +4,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:orientation="vertical"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.khalid.sharektest.MyProfile">
+
+    <ImageView
+        android:id="@+id/myProfile_imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/logo" />
     <TableLayout
+        android:id="@+id/myProfile"
         android:layout_width="match_parent"
-        android:layout_height="119dp">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/myProfile_imageView"
+        android:layout_marginTop="30dp"
+        android:layout_weight=".1"
+        android:animateLayoutChanges="true"
+        android:background="#fafafa"
+        android:baselineAligned="true"
+        android:nextFocusDown="@color/black"
+        android:paddingLeft="12dp"
+        android:splitMotionEvents="true">
+
+        <TableRow
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp">
+
+
+            <TextView
+
+                android:id="@+id/textView19"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="User name"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#d61414" />
+
+            <TextView
+                android:id="@+id/myProfile_about_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="20"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </TableRow>
+
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp">
 
 
             <TextView
@@ -24,54 +67,92 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
-                android:text="Phone : "
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:layout_marginTop="10dp"
+                android:text="Phone            "
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#d61414" />
 
             <TextView
                 android:id="@+id/myProfile_about_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="12"
+                android:layout_column="20"
+                android:layout_marginTop="10dp"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge" />
         </TableRow>
+
         <TableRow
+
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp">
 
             <TextView
+
                 android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
-                android:text="Points : "
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:text="Points  "
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#d61414" />
 
             <TextView
                 android:id="@+id/myProfile_about_points"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="12"
+                android:layout_column="20"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge" />
         </TableRow>
+
         <TableRow
+
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp">
+
+
+            <TextView
+
+                android:id="@+id/textView13"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="E-mail  "
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#d61414" />
+
+            <TextView
+                android:id="@+id/myProfile_about_mail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="20"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </TableRow>
+
+        <TableRow
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="20dp">
 
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="E-mail : "
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:text="Job title  "
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#d61414" />
 
             <TextView
-                android:id="@+id/myProfile_about_mail"
+                android:id="@+id/myProfile_about_work"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_column="12"
+                android:layout_column="20"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge" />
         </TableRow>
