--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,11 +5,11 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Help"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_privacy"
+        android:id="@+id/action_about"
         android:orderInCategory="100"
-        android:title="Privacy"
+        android:title="About us"
         app:showAsAction="never" />
 </menu>
