--- a/app/src/main/res/layout/activity_add_share.xml
+++ b/app/src/main/res/layout/activity_add_share.xml
@@ -314,7 +314,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/From"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:visibility="gone">
         <CheckBox
             android:id="@+id/addShare_checkBox_agreement"
             android:layout_width="match_parent"
