--- a/app/src/main/res/layout/owner_info_dialog.xml
+++ b/app/src/main/res/layout/owner_info_dialog.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -13,35 +13,70 @@
     <!--android:textSize="15sp"/>-->
     <ImageView
         android:id="@+id/ownerInfoDialog_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:background="@drawable/logo" />
 
+    <LinearLayout
+        android:id="@+id/e"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_toRightOf="@id/ownerInfoDialog_image"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/ownerInfoDialog_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
-        android:gravity="center"
         android:text="Owner name"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/ownerInfoDialog_gender"
+
+        android:id="@+id/ownerInfoDialog_homeAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="gender"
-        android:textSize="15sp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:text="Address"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
+
+        android:id="@+id/ownerInfoDialog_work"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:text="Job title"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+        <TextView
         android:id="@+id/ownerInfoDialog_points"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
         android:text="25"
         android:textSize="15sp"
         android:textStyle="bold" />
+    </LinearLayout>
 
-</LinearLayout>
+    <Button
+        android:id="@+id/ownerInfoDialog_Button_call"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/e"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="35dp"
+        android:background="#c22d2d"
+        android:gravity="center"
+        android:text="Call"
+        android:textColor="@color/white"
+        android:visibility="gone" />
+</RelativeLayout>
