--- a/app/src/main/res/layout/proposal_dialog.xml
+++ b/app/src/main/res/layout/proposal_dialog.xml
@@ -30,7 +30,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:layout_weight="1"
-        android:hint="yyy/mm/dd"
+        android:hint="dd/mm/yy"
         android:inputType="text" />
 
     <TextView
